changed categories to Tags, added languages, implemented quick search